chore: prettier config and re-apply

--- a/src/app/core/navigation/navigation.component.html
+++ b/src/app/core/navigation/navigation.component.html
@@ -9,8 +9,7 @@
     class="navbar-toggler"
     data-target="#topNavbarCollapse"
     data-toggle="collapse"
-    type="button"
-  >
+    type="button">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="topNavbarCollapse">
