--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,6 @@ tr.mat-mdc-footer-row {
   font-weight: bold;
   height: 10px !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
