--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
-<app-navigation></app-navigation>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12 body-content">
+<div>
+  <app-heading *ngIf="authenticated().isAuthenticated"></app-heading>
+  <div class="pure-g" style="min-height: 100vh">
+    <div
+      class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"
+      id="content-layout-left"></div>
+    <div
+      class="pure-u-22-24 pure-u-md-20-24 pure-u-lg-18-24 pure-u-xl-10-24"
+      id="content-layout-center"
+      style="min-height: 100vh">
       <router-outlet></router-outlet>
     </div>
+    <div
+      class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"
+      id="content-layout-right"></div>
   </div>
 </div>
