chore: oidc fallback

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,4 +1,44 @@
-<div>Welcome to home Route</div>
+<div
+  style="
+    display: flex;
+    align-items: top;
+    justify-content: center;
+    min-height: 85vh;
+  "
+  id="home container">
+  <div
+    id="primary-content"
+    style="box-sizing: border-box; margin: 0; max-width: 500px">
+    <mat-card appearance="outlined">
+      <mat-card-content>
+        <div id="app-information">
+          <img
+            id="ledger-logo"
+            src="/assets/images/project-icon.png"
+            width="70"
+            height="70"
+            alt="ledger logo" />
+          <h2 class="mat-h2">Welcome to Lorem List</h2>
+          <h3 class="mat-h3" style="margin: 0.8rem">
+            {{ buildProperties.version }}
+          </h3>
+          <!-- <p class="mat-small" style="margin: 0.1rem">
+            {{ buildProperties.time | date: 'mediumDate' : 'UTC' }}
+          </p>
+          <p class="mat-small" style="margin: 0.1rem">
+            {{ buildProperties.time | date: 'longTime' : 'UTC' }}
+          </p> -->
+          <p class="mat-small" style="margin: 0.1rem">
+            <br />
+            {{ buildProperties.ciPlatform }} |
+            {{ buildProperties.ciPipelineId }} |
+            {{ buildProperties.commit }}
+          </p>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
 
 <br />
 Is Authenticated: {{ authenticated().isAuthenticated }}
