--- a/src/app/core/heading/heading.component.html
+++ b/src/app/core/heading/heading.component.html
@@ -8,12 +8,12 @@
           height="30"
           alt=""
           style="float: left" />
-        <button mat-button [routerLink]="'/home'">Lorem List</button>
-        <button mat-button [matMenuTriggerFor]="menuBook">Lists</button>
-        <button mat-button>Api</button>
+        <button mat-button [routerLink]="'/home'">Home</button>
+        <button mat-button [routerLink]="'/lists'">Lists</button>
+        <button mat-button [routerLink]="'/items'">Items</button>
       </span>
 
-      <mat-menu #menuBook="matMenu">
+      <!-- <mat-menu #menuBook="matMenu">
         <button mat-menu-item [routerLink]="'/accounts-table'">
           Accounts (Table)
         </button>
@@ -21,10 +21,7 @@
         <button mat-menu-item>Securities</button>
         <button mat-menu-item>Prices</button>
         <button mat-menu-item>Settings</button>
-        <!-- <button mat-menu-item [routerLink]="'import'">
-          Import Book from Gnucash XML
-        </button> -->
-      </mat-menu>
+      </mat-menu> -->
     </div>
 
     <div class="pure-u-1-2">
@@ -32,6 +29,7 @@
         <!-- <button mat-button [routerLink]="'/admin/settings'" *ngIf="isAdmin">
           <mat-icon style="margin-right: 0.5rem">settings</mat-icon>Settings
         </button> -->
+        <!-- *ngIf="this.oidcUser" -->
         <button *ngIf="this.oidcUser" mat-button [matMenuTriggerFor]="menuUser">
           <mat-icon style="margin-right: 0.5rem">account_circle</mat-icon
           >{{ this.oidcUser().userData?.preferred_username }}
