chore: basic ui

--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 85vh;
+    /* min-height: 85vh; */
   "
   id="login container">
   <div
@@ -19,21 +19,21 @@
             height="70"
             alt="ledger logo" />
           <h2 class="mat-h2">Lorem List</h2>
-          <h3 class="mat-h3" style="margin: 0.8rem">
+          <!-- <h3 class="mat-h3" style="margin: 0.8rem">
             {{ buildProperties.version }}
-          </h3>
+          </h3> -->
           <!-- <p class="mat-small" style="margin: 0.1rem">
             {{ buildProperties.time | date: 'mediumDate' : 'UTC' }}
           </p>
           <p class="mat-small" style="margin: 0.1rem">
             {{ buildProperties.time | date: 'longTime' : 'UTC' }}
           </p> -->
-          <p class="mat-small" style="margin: 0.1rem">
+          <!-- <p class="mat-small" style="margin: 0.1rem">
             <br />
             {{ buildProperties.ciPlatform }} |
             {{ buildProperties.ciPipelineId }} |
             {{ buildProperties.commit }}
-          </p>
+          </p> -->
         </div>
         <!-- <p> -->
         <button
