--- a/src/app/core/login/login.component.scss
+++ b/src/app/core/login/login.component.scss
@@ -9,7 +9,7 @@ mat-card {
   // height: 50%;
   margin: auto;
   position: absolute;
-  top: 100px;
+  // top: 100px;
   left: 0;
   bottom: 0;
   right: 0;
