--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -20,7 +20,8 @@
             alt="ledger logo" />
           <h2 class="mat-h2">Welcome to Lorem List</h2>
           <h3 class="mat-h3" style="margin: 0.8rem">
-            {{ buildProperties.version }}
+            0.1.0
+            <!-- {{ buildProperties.version }} -->
           </h3>
           <!-- <p class="mat-small" style="margin: 0.1rem">
             {{ buildProperties.time | date: 'mediumDate' : 'UTC' }}
