--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,5 +1,5 @@
 // https://material.angular.io/guide/theming
-@use "@angular/material" as mat;
+@use '@angular/material' as mat;
 
 /* SCSS HEX */
 // https://coolors.co/474448-2d232e-e0ddcf-534b52-f1f0ea
