chore: fix build properties date in home component

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -22,12 +22,12 @@
           <h3 class="mat-h3" style="margin: 0.8rem">
             {{ buildProperties.version }}
           </h3>
-          <!-- <p class="mat-small" style="margin: 0.1rem">
+          <p class="mat-small" style="margin: 0.1rem">
             {{ buildProperties.time | date: 'mediumDate' : 'UTC' }}
           </p>
           <p class="mat-small" style="margin: 0.1rem">
             {{ buildProperties.time | date: 'longTime' : 'UTC' }}
-          </p> -->
+          </p>
           <p class="mat-small" style="margin: 0.1rem">
             <br />
             {{ buildProperties.ciPlatform }} |
