--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -3,7 +3,7 @@
     display: flex;
     align-items: top;
     justify-content: center;
-    min-height: 85vh;
+    /* min-height: 85vh; */
   "
   id="home container">
   <div
@@ -39,7 +39,3 @@
     </mat-card>
   </div>
 </div>
-
-<br />
-Is Authenticated: {{ authenticated().isAuthenticated }}
-<pre>{{ userData() | json }}</pre>
