--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,10 +1,5 @@
 <div
-  style="
-    display: flex;
-    align-items: top;
-    justify-content: center;
-    /* min-height: 85vh; */
-  "
+  style="display: flex; align-items: top; justify-content: center"
   id="home container">
   <div
     id="primary-content"
