--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,105 +1,97 @@
-<div>
-  <!-- <mat-toolbar *ngIf="authenticated().isAuthenticated" class="pure-u-1-1"> -->
-  <mat-toolbar class="pure-u-1-1">
+<div class="pure-g">
+  <mat-toolbar>
     <div class="pure-u-1-2">
       <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
         <mat-icon>menu</mat-icon>
       </button>
     </div>
-
     <div class="pure-u-1-2">
       <span style="float: right">
-        <!-- <button mat-button [routerLink]="'/admin/settings'" *ngIf="isAdmin">
-          <mat-icon style="margin-right: 0.5rem">settings</mat-icon>Settings
-        </button> -->
-        <!-- *ngIf="this.oidcUser" -->
         <button *ngIf="this.oidcUser" mat-button [matMenuTriggerFor]="menuUser">
           <mat-icon style="margin-right: 0.5rem">account_circle</mat-icon
           >{{ this.oidcUser().userData?.name }}
         </button>
       </span>
-
       <mat-menu #menuUser="matMenu">
-        <!-- <button mat-menu-item (click)="navigateToProfile()">Profile</button> -->
         <button mat-menu-item (click)="logoutOidc()">Sign Out</button>
       </mat-menu>
     </div>
   </mat-toolbar>
-
-  <mat-sidenav-container autosize>
-    <!-- *ngIf="authenticated().isAuthenticated" -->
-    <mat-sidenav
-      [mode]="isMobile ? 'over' : 'side'"
-      [opened]="isMobile ? 'false' : 'true'">
-      <mat-nav-list>
-        <a
-          [routerLink]="'/home'"
-          routerLinkActive
-          [routerLinkActiveOptions]="{ exact: true }"
-          mat-list-item>
-          <span class="entry">
-            <mat-icon>house</mat-icon>
-            <span *ngIf="!isCollapsed">Home</span>
-          </span>
-        </a>
-        <a
-          [routerLink]="'/lists'"
-          routerLinkActive
-          [routerLinkActiveOptions]="{ exact: true }"
-          mat-list-item>
-          <span class="entry">
-            <mat-icon>list</mat-icon>
-            <span *ngIf="!isCollapsed">Lists</span>
-          </span>
-        </a>
-        <a
-          [routerLink]="'/items'"
-          routerLinkActive
-          [routerLinkActiveOptions]="{ exact: true }"
-          mat-list-item>
-          <span class="entry">
-            <mat-icon>check_box_outline_blank</mat-icon>
-            <span *ngIf="!isCollapsed">Items</span>
-          </span>
-        </a>
-        <a
-          [routerLink]="'/login'"
-          routerLinkActive
-          [routerLinkActiveOptions]="{ exact: true }"
-          mat-list-item>
-          <span class="entry">
-            <mat-icon>login</mat-icon>
-            <span *ngIf="!isCollapsed">Login</span>
-          </span>
-        </a>
-        <a
-          [routerLink]="'/logout'"
-          routerLinkActive
-          [routerLinkActiveOptions]="{ exact: true }"
-          mat-list-item
-          (click)="logoutOidc()">
-          <span class="entry">
-            <mat-icon>logout</mat-icon>
-            <span *ngIf="!isCollapsed">Logout</span>
-          </span>
-        </a>
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <div class="pure-g" style="min-height: 100vh">
-        <div
-          class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"
-          id="content-layout-left"></div>
-        <div
-          class="pure-u-22-24 pure-u-md-20-24 pure-u-lg-18-24 pure-u-xl-10-24"
-          id="content-layout-center"
-          style="min-height: 100vh">
-          <router-outlet></router-outlet>
-        </div>
-        <div
-          class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"
-          id="content-layout-right"></div>
-      </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
 </div>
+
+<!-- autosize is non-performant but leaves content to right after expanding sidenav, need to manually manage that -->
+<mat-sidenav-container autosize>
+  <!-- *ngIf="authenticated().isAuthenticated" -->
+  <mat-sidenav
+    [mode]="isMobile ? 'over' : 'side'"
+    [opened]="isMobile ? 'false' : 'true'">
+    <mat-nav-list>
+      <a
+        [routerLink]="'/home'"
+        routerLinkActive
+        [routerLinkActiveOptions]="{ exact: true }"
+        mat-list-item>
+        <span class="entry">
+          <mat-icon>house</mat-icon>
+          <span *ngIf="!isCollapsed">Home</span>
+        </span>
+      </a>
+      <a
+        [routerLink]="'/lists'"
+        routerLinkActive
+        [routerLinkActiveOptions]="{ exact: true }"
+        mat-list-item>
+        <span class="entry">
+          <mat-icon>list</mat-icon>
+          <span *ngIf="!isCollapsed">Lists</span>
+        </span>
+      </a>
+      <a
+        [routerLink]="'/items'"
+        routerLinkActive
+        [routerLinkActiveOptions]="{ exact: true }"
+        mat-list-item>
+        <span class="entry">
+          <mat-icon>check_box_outline_blank</mat-icon>
+          <span *ngIf="!isCollapsed">Items</span>
+        </span>
+      </a>
+      <a
+        [routerLink]="'/login'"
+        routerLinkActive
+        [routerLinkActiveOptions]="{ exact: true }"
+        mat-list-item>
+        <span class="entry">
+          <mat-icon>login</mat-icon>
+          <span *ngIf="!isCollapsed">Login</span>
+        </span>
+      </a>
+      <a
+        [routerLink]="'/logout'"
+        routerLinkActive
+        [routerLinkActiveOptions]="{ exact: true }"
+        mat-list-item
+        (click)="logoutOidc()">
+        <span class="entry">
+          <mat-icon>logout</mat-icon>
+          <span *ngIf="!isCollapsed">Logout</span>
+        </span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="pure-g">
+      <div
+        class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"
+        id="content-layout-left"></div>
+      <div
+        class="pure-u-22-24 pure-u-md-20-24 pure-u-lg-18-24 pure-u-xl-10-24"
+        id="content-layout-center">
+        <router-outlet></router-outlet>
+      </div>
+      <div
+        class="pure-u-1-24 pure-u-md-2-24 pure-u-lg-3-24 pure-u-xl-7-24"
+        id="content-layout-right"></div>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
