--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,18 @@
-mat-sidenav-container {
-  height: calc(100vh - 65px);
+.sidenav-container {
+  height: 100%;
 }
 
-mat-sidenav {
-  min-width: 100px;
-
-  .entry {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: 0.75rem;
-  }
+.sidenav {
+  width: 72px;
+  padding: 0 8px;
 }
 
-// Move the content down so that it won't be hidden by the toolbar
-mat-sidenav-content {
-  padding-top: 3.5rem;
-  @media screen and (min-width: 600px) {
-    padding-top: 4rem;
-  }
+// .sidenav .mat-toolbar {
+//   background: inherit;
+// }
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
