--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -10,13 +10,36 @@
           <img
             id="ledger-logo"
             src="/assets/images/project-icon.png"
-            width="70"
-            height="70"
+            width="72"
+            height="72"
             alt="ledger logo" />
           <h2 class="mat-h2">Welcome to Lorem List</h2>
           <h3 class="mat-h3" style="margin: 0.8rem">
             {{ buildProperties.version }}
           </h3>
+          @if (!authenticated().isAuthenticated) {
+            <div>
+              <button
+                class="color-token"
+                mat-flat-button
+                (click)="login()"
+                color="primary"
+                style="margin-top: 1rem; width: 100%">
+                Login with {{ oidcName }}
+              </button>
+            </div>
+          }
+          @if (authenticated().isAuthenticated) {
+            <div>
+              <button
+                mat-flat-button
+                (click)="login()"
+                color="primary"
+                style="margin-top: 1rem; width: 100%">
+                Create a List
+              </button>
+            </div>
+          }
           <p class="mat-small" style="margin: 0.1rem">
             {{ buildProperties.time | date: 'mediumDate' : 'UTC' }}
           </p>
