refactor: project icon color and display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,11 @@
     <mat-toolbar>
       <span>
         <img
-          id="ledger-logo"
-          src="/assets/images/project-icon.png"
-          width="28"
+          id="nav-lorem-list-logo"
+          src="/assets/images/project-icon.svg"
           height="28"
-          alt="ledger logo" /> </span
+          width="28"
+          alt="lorem list logo" /> </span
     ></mat-toolbar>
     <mat-nav-list>
       <a
