--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -8,11 +8,10 @@
       <mat-card-content>
         <div id="app-information">
           <img
-            id="ledger-logo"
-            src="/assets/images/project-icon.png"
-            width="72"
-            height="72"
-            alt="ledger logo" />
+            id="lorem-list-logo"
+            style="width: 4em; height: 4em"
+            src="/assets/images/project-icon.svg"
+            alt="lorem list logo" />
           <h2 class="mat-h2">Welcome to Lorem List</h2>
           <h3 class="mat-h3" style="margin: 0.8rem">
             {{ buildProperties.version }}
