--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,15 @@
+#content-layout-parent {
+  max-height: 80vh;
+}
+
+#content-layout-center {
+  box-sizing: border-box;
+}
+
+#user-indicator-button {
+  float: right;
+}
+
 .sidenav-container {
   height: 100%;
 }
@@ -7,12 +19,12 @@
   padding: 0 8px;
 }
 
-// .sidenav .mat-toolbar {
-//   background: inherit;
-// }
-
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+.full-width {
+  width: 100%;
 }
