--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,16 +1,17 @@
-mat-card {
-  margin: 1rem;
-  text-align: center;
+#version {
+  margin: 0.8rem;
 }
 
-.splash {
-  /* absolute center .splash within .splash-container */
-  // width: 10%;
-  // height: 50%;
-  margin: auto;
-  position: absolute;
-  top: 100px;
-  left: 0;
-  bottom: 0;
-  right: 0;
+#build-info-wrapper {
+  margin: 0.8rem;
+}
+
+mat-card {
+  text-align: center;
+  max-width: 550px;
+}
+
+.home-button {
+  margin-top: 1rem;
+  width: 100%;
 }
