refactor: nav bar menu tool tips

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
         routerLinkActive
         [routerLinkActiveOptions]="{ exact: true }"
         mat-list-item
-        matTooltip="Lists"
+        matTooltip="Manage Lists"
         matTooltipPosition="right"
         [matTooltipDisabled]="isMatTooltipDisabled()">
         <span>
@@ -44,7 +44,7 @@
         routerLinkActive
         [routerLinkActiveOptions]="{ exact: true }"
         mat-list-item
-        matTooltip="Create List"
+        matTooltip="Create a List"
         matTooltipPosition="right"
         [matTooltipDisabled]="isMatTooltipDisabled()">
         <span>
@@ -56,7 +56,7 @@
         routerLinkActive
         [routerLinkActiveOptions]="{ exact: true }"
         mat-list-item
-        matTooltip="Items"
+        matTooltip="Manage Items"
         matTooltipPosition="right"
         [matTooltipDisabled]="isMatTooltipDisabled()">
         <span>
@@ -68,7 +68,7 @@
         routerLinkActive
         [routerLinkActiveOptions]="{ exact: true }"
         mat-list-item
-        matTooltip="Create Item"
+        matTooltip="Create an Item"
         matTooltipPosition="right"
         [matTooltipDisabled]="isMatTooltipDisabled()">
         <span>
