--- a/src/app/domain/routes/home/home.component.scss
+++ b/src/app/domain/routes/home/home.component.scss
@@ -15,3 +15,12 @@ mat-card {
   margin-top: 1rem;
   width: 100%;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.col {
+  flex: 1;
+}
